<resources>
    <string name="app_name">ContactsDemo</string>
    <string name="contacts">Contacts</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="message">Message</string>
    <string name="loading">Loading...</string>
    <string name="unknown_creation_time">unknown</string>

    <plurals name="mins_ago">
        <item quantity="one">1 min. ago</item>
        <item quantity="other">%d mins. ago</item>
    </plurals>

    <plurals name="hrs_ago">
        <item quantity="one">1 hour. ago</item>
        <item quantity="other">%d hrs. ago</item>
    </plurals>

    <plurals name="days_ago">
        <item quantity="one">1 day. ago</item>
        <item quantity="other">%d days. ago</item>
    </plurals>

</resources>
