<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/contact_detail_page_margin"
    android:layout_marginRight="@dimen/contact_detail_page_margin"
    android:layout_marginBottom="@dimen/contact_detail_page_margin"
    tools:context="com.neil.contactsdemo.ui.activities.ContactDetailActivity">


    <LinearLayout
        android:id="@+id/ll_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_phone_number"
        app:layout_constraintVertical_chainStyle="spread">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/contact_detail_avatar_width"
            android:layout_height="@dimen/contact_detail_avatar_height"
            android:layout_gravity="center"
            android:layout_margin="@dimen/contact_detail_avatar_margin"
            android:layout_marginEnd="@dimen/contact_detail_avatar_margin"
            android:layout_marginStart="@dimen/contact_detail_avatar_margin"
            android:src="@drawable/avatar_placeholder"
            app:civ_border_color="@color/colorGrey"
            app:civ_border_width="@dimen/contact_avatar_border_width" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/empty"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_gender"
        app:layout_constraintTop_toBottomOf="@id/ll_avatar"
        app:layout_constraintVertical_chainStyle="spread">

        <TextView
            android:id="@+id/phone_number_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_email"
        app:layout_constraintTop_toBottomOf="@id/ll_phone_number"
        app:layout_constraintVertical_chainStyle="spread">

        <TextView
            android:id="@+id/gender_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_address"
        app:layout_constraintTop_toBottomOf="@id/ll_gender"
        app:layout_constraintVertical_chainStyle="spread">

        <TextView
            android:id="@+id/email_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_message"
        app:layout_constraintTop_toBottomOf="@id/ll_email"
        app:layout_constraintVertical_chainStyle="spread">

        <TextView
            android:id="@+id/address_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/message"
            android:layout_width="@dimen/message_button_width"
            android:layout_height="@dimen/message_button_height"
            android:layout_gravity="center"
            android:background="@drawable/bg_rounded_btn"
            android:text="@string/message"
            android:textAllCaps="false"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
